[gateway] http basic authorization implementation
